tests/traci/set_variable/Vehicle/ChangeRoute/invalidOnInternal/vehroutes.traci
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Fri Feb  8 10:08:47 2019 by Eclipse SUMO Version v1_0_1+0645-93703db
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="58917"/>
    </traci_server>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <vehicle id="veh0" type="vType1" depart="0.00" departPos="0.00" arrival="78.00">
        <route edges="e_m5 e_m6 e_shape1"/>
    </vehicle>

</routes>
